--- a/Diabetes.ipynb
+++ b/Diabetes.ipynb
@@ -611,7 +611,7 @@
     "- **K-Nearest Neighbors (KNN)**: model yang digunakan untuk melakukan klasifikasi berdasarkan kedekatan dengan tetangga terdekat (k-NN) dari setiap sampel di ruang fitur.\n",
     "- **Decision Tree Classifier (CART)**: model yang digunakan untuk melakukan klasifikasi dengan membuat pohon keputusan, yaitu model yang memisahkan data berdasarkan serangkaian aturan berhierarki.\n",
     "- **Gaussian Naive Bayes (NB)**: model yang digunakan untuk memprediksi variabel target dengan menghitung probabilitas setiap fitur terhadap setiap kelas dan menggunakan teorema Bayes.\n",
-    "- **Random Forest Classifier (SVM)**: model yang digunakan untuk memprediksi variabel target dengan membuat sejumlah besar pohon keputusan dan mengambil keputusan berdasarkan mayoritas suara dari pohon-pohon tersebut.\n",
+    "- **Random Forest Classifier (RF)**: model yang digunakan untuk memprediksi variabel target dengan membuat sejumlah besar pohon keputusan dan mengambil keputusan berdasarkan mayoritas suara dari pohon-pohon tersebut.\n",
     "- **Multi-Layer Perceptron (MLP)**: model yang digunakan untuk memprediksi variabel target dengan menggunakan jaringan saraf tiruan yang terdiri dari lapisan input, lapisan tersembunyi, dan lapisan output."
    ]
   },
@@ -696,7 +696,7 @@
     "models.append(('KNN', KNeighborsClassifier()))\n",
     "models.append(('CART', DecisionTreeClassifier()))\n",
     "models.append(('NB', GaussianNB()))\n",
-    "models.append(('SVM', RandomForestClassifier()))\n",
+    "models.append(('RF', RandomForestClassifier()))\n",
     "models.append(('MLP', MLPClassifier(hidden_layer_sizes=(10, 5), max_iter=1000, random_state=42)))\n",
     "# evaluate each model in turn\n",
     "results = []\n",
@@ -731,8 +731,8 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "\n",
-    "sns.boxplot(data=results, palette='Blues')\n",
-    "sns.swarmplot(data=results, color='black', edgecolor='gray', size=8) #distribusi data pada variabel kategorikal. Plot ini menampilkan titik-titik data yang dikelompokkan berdasarkan variabel kategorikal dan mengatur posisi titik-titik tersebut agar tidak tumpang tindih satu sama lain.\n",
+    "mean_acc = [np.mean(result) for result in results]\n",
+    "sns.barplot(x=names, y=mean_acc, palette='Blues')\n",
     "\n",
     "ax.set_xticklabels(names, fontsize=12, fontweight='bold', rotation=45)\n",
     "ax.set_yticks([0.5, 0.6, 0.7, 0.8, 0.9])\n",
@@ -741,8 +741,8 @@
     "ax.set_ylabel('Akurasi', fontsize=14, fontweight='bold')\n",
     "ax.set_title('Perbandingan Akurasi Model Prediksi', fontsize=16, fontweight='bold')\n",
     "\n",
-    "for i in range(len(names)):\n",
-    "    plt.text(i, 0.95, '{:.3f}'.format(results[i].mean()), ha='center', va='top', fontsize=12, fontweight='bold')\n",
+    "for i, acc in enumerate(mean_acc):\n",
+    "    plt.text(i, acc+0.01, '{:.3f}'.format(acc), ha='center', fontsize=12, fontweight='bold')\n",
     "\n",
     "plt.ylim(0.5, 1.0)\n",
     "plt.tight_layout()\n",
